--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 
 html {
   font-family: "Nunito Sans", sans-serif;
+  font-optical-sizing: auto;
 }
 
 .app {
@@ -29,4 +30,27 @@ html {
 
 .logo-color {
   color: var(--color-text-secondary);
+}
+
+.income {
+  padding: 16px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.income > div {
+  padding: 8px;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+div > input {
+  border-radius: 8px;
+  border: 1px solid var(--color-light-gray);
+  font-size: 1rem;
+  padding: 0 8px;
 }
