--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --color-text-secondary: #34d186;
+  --color-button-hover: #0f7946;
   --color-light-gray: #bfbfbf;
 }
 
@@ -32,7 +33,8 @@ html {
   color: var(--color-text-secondary);
 }
 
-.income {
+.income,
+.expense-form {
   padding: 16px;
   display: flex;
   justify-content: center;
@@ -40,7 +42,8 @@ html {
   flex-wrap: wrap;
 }
 
-.income > div {
+.income > div,
+.expense-form > fieldset {
   padding: 8px;
   display: grid;
   grid-template-columns: 2fr 1fr;
@@ -48,9 +51,31 @@ html {
   font-weight: 600;
 }
 
-div > input {
+fieldset {
+  border: none;
+}
+
+div > input,
+fieldset > input {
   border-radius: 8px;
   border: 1px solid var(--color-light-gray);
   font-size: 1rem;
   padding: 0 8px;
+}
+
+.button {
+  width: 100px;
+  margin: 8px;
+  padding: 8px;
+  border: none;
+  border-radius: 16px;
+  background-color: var(--color-text-secondary);
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+button:hover {
+  background-color: var(--color-button-hover);
 }
